UX: fix overflow channel row + mobile remove styling tweak (#23611)
* UX: fix missing overflow ellipsis

* cleanup double declaration

* UX: add missing border-radius

*UX: delete icon animation tweak

--- a/plugins/chat/assets/stylesheets/common/chat-channel-row.scss
+++ b/plugins/chat/assets/stylesheets/common/chat-channel-row.scss
@@ -9,6 +9,8 @@
 
   &__content {
     display: flex;
+    justify-content: space-between;
+    max-width: 100%;
     align-items: center;
     flex-grow: 1;
   }
@@ -69,7 +71,6 @@
   }
 
   .chat-channel-title {
-    width: 100%;
     overflow: hidden;
 
     &__users-count {
